# Orsta-Client

./: .env.example  .gitignore  Cargo.toml  README.md  bacon.toml  config.toml  database.db
dashboard/: .env.example  package-lock.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/api/: index.ts
dashboard/src/components/billing/: BillingTable.tsx
dashboard/src/components/instances/: InstanceTable.tsx
dashboard/src/hooks/: useBilling.ts  useInstances.ts
dashboard/src/pages/: Billing.tsx  Dashboard.tsx  Instances.tsx
dashboard/src/types/: index.ts
dashboard/src/utils/: billing.ts
docs/: README.md  curl.md  go.md  payment-setup.md  python.md  typescript.md
migrations/2026-02-22-100436-0000_create_users/: down.sql  up.sql
migrations/2026-02-22-100436-0001_add_users_created_at/: down.sql  up.sql
migrations/2026-02-22-100436-0002_create_instances/: up.sql
migrations/2026-02-22-100436-0003_create_billing_records/: down.sql  up.sql
src/: auth.rs  logger.rs  main.rs  payment.rs  schema.rs
src/route/: auth.rs  billing.rs  instance.rs  mod.rs  user.rs  ws.rs
src/sql/: billing.rs  instance.rs  mod.rs  orchestrator.rs  user.rs  user_property.rs
