[package]
name = "Orsta-Client"
version = "0.1.0"
edition = "2024"
description = "A client for Orsta, a whatsapp service."
license = "MIT"

[dependencies]
diesel = "2.3.6"
diesel-async = { version = "0.7.4", features = [
    "postgres",
    "sqlite",
    "sync-connection-wrapper",
] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }

[profile.release]
strip = true
opt-level = "z"
lto = true

[profile.dev]
debug = 1
codegen-units = 256
incremental = true

[profile.dev.package."*"]
opt-level = 3
