[package]
name = "Orsta-Client"
version = "0.1.0"
edition = "2024"
description = "A client for Orsta, a whatsapp service."
license = "MIT"

[dependencies]
argon2 = "0.5"
axum = { version = "0.8.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.3.6", features = ["sqlite", "r2d2"] }
diesel-async = { version = "0.7.4", features = [
    "postgres",
    "sqlite",
    "sync-connection-wrapper",
] }
futures-util = "0.3"
http = "1.4.0"
jsonwebtoken = "9"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
opt-level = "z"
lto = true

[profile.dev]
debug = 1
codegen-units = 256
incremental = true

[profile.dev.package."*"]
opt-level = 3
